--- a/AnimeSea/AnimeSea.csproj
+++ b/AnimeSea/AnimeSea.csproj
@@ -33,6 +33,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\AnimeSea.Metadata\AnimeSea.Metadata.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Content Update="Views\_ViewImports.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
