--- a/AnimeSea/AnimeSea.csproj
+++ b/AnimeSea/AnimeSea.csproj
@@ -5,16 +5,22 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Database\**" />
+    <Content Remove="Database\**" />
+    <EmbeddedResource Remove="Database\**" />
+    <None Remove="Database\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Content Remove="Views\Home\Index.cshtml" />
     <Content Remove="Views\Search\Index.cshtml" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Database\Models\" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <PackageReference Include="Autofac" Version="4.8.0" />
+    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.2.2" />
     <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.0-preview2-final" />
+    <PackageReference Include="Microsoft.DotNet.Watcher.Tools" Version="2.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.0.2" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.0-preview2-final" />
   </ItemGroup>
@@ -33,6 +39,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\AnimeSea.Data\AnimeSea.Data.csproj" />
     <ProjectReference Include="..\AnimeSea.Metadata\AnimeSea.Metadata.csproj" />
   </ItemGroup>
 
