--- a/AnimeSea/AnimeSea.csproj
+++ b/AnimeSea/AnimeSea.csproj
@@ -17,12 +17,18 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="animesea.db" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Autofac" Version="4.8.0" />
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.2.2" />
     <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.0-preview2-final" />
     <PackageReference Include="Microsoft.DotNet.Watcher.Tools" Version="2.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.0.2" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.0-preview2-final" />
+    <PackageReference Include="NLog" Version="4.5.3" />
+    <PackageReference Include="NLog.Web.AspNetCore" Version="4.5.3" />
   </ItemGroup>
 
   <ItemGroup>
